Fixed overflow on webpages
Pages are now able to scroll up or down if content is overflowing past the screen

--- a/schedule/schedule.css
+++ b/schedule/schedule.css
@@ -59,7 +59,7 @@
   margin: 0px;
   background: white;
   width: 14.2857142857%;
-  height: 80px;
+  height: 3000px;
   text-align: left;
   vertical-align: top;
   border: solid black 1px;
